docker-desktop/05_ingress-gateway-istio/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gallery
spec:
  parentRefs:
  - name: gallery-gateway
  hostnames: ["gallery.local"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v4
    backendRefs:
    - name: gallery-svc-v4
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /v5
    backendRefs:
    - name: gallery-svc-v5
      port: 80
